修改加密方式